# educational_modules_app

./: .env.sample  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
docs_eng/: README.md
educational_modules/: admin.py  models.py  paginators.py  permissions.py  tests.py  urls.py  validiators.py
educational_modules/api_views/: lesson.py  module.py
educational_modules/migrations/: 0001_initial.py
educational_modules/serializers/: lesson.py  module.py
users/: admin.py  models.py  permissions.py  services.py  tasks.py  tests.py
users/api_views/: user.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/serializers/: user.py
